# splendor-rust

./: .gitignore  CLAUDE.md  Cargo.toml
src/: aristocrat.rs  aristocrat_storage.rs  game_state.rs  lib.rs  main.rs  node.rs  player.rs  resource.rs  resources.rs  state_encoder.rs
src/board/: board.rs  mod.rs
src/board/rows/: card_reference.rs  mod.rs  row.rs  rows.rs
src/card/: card.rs  card_storage.rs  cost.rs  mod.rs  tier.rs
src/moves/: _add_card_to_player_reserve.rs  _add_player_reserve.rs  _give_player_resources.rs  all_moves.rs  build_card.rs  build_from_reserve.rs  get_three.rs  get_two.rs  mod.rs  move_trait.rs  reserve.rs  reserve_from_hidden.rs
synthetic_data/: README.md  constants.rs  evaluate_player_zero_state.rs  generate_traces_from_player_zero_state.rs  generator.rs  getters.rs  main.rs  replay_game.rs  rng_state.rs  save_data.rs  state_to_bytes.rs  test_rng_state.rs
