[package]
name = "splendor"
version = "0.1.0"
edition = "2021"

[lib]
name = "splendor"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "synthetic_data"
path = "synthetic_data/main.rs"

[[bin]]
name = "replay_game"
path = "synthetic_data/replay_game.rs"

[dependencies]
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
log = "0.4.27"
getset = "0.1.6"
once_cell = "1.19"
pyo3 = { version = "0.23", features = ["extension-module"] }
ndarray = "0.15"
ndarray-npy = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
